# cards

./: .gitignore  LICENSE  README.md  cards.cabal  learn.cabal
src/: Main.hs
