name:                cards
version:             0.1.0.0
synopsis:            Some basic CLI functions using different packages.
description:         A simple cards CLI game.
homepage:            https://github.com/p-skal/cards#readme
license:             BSD3
license-file:        LICENSE
author:              Peter S.
maintainer:          peterswebdev@gmail.com
copyright:           2019, Peter S.
category:            CLI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cards
  ghc-options:         -Wall
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       ansi-terminal >= 0.8,
                       split >= 0.2.3.3
